# xao.sf.contract

./: .gitignore  .npmrc  .replit  README.md  deploy.txt  flattened_XAOToken.sol  generate_diagrams.py  generate_qr.py  global.d.ts  hardhat.config.js  init_github.sh  package-lock.json  package.json  pyproject.toml  replit.nix  server.js  truffle-config.js  tsconfig.json  verification_input.json  verify.json
attached_assets/: Pasted--Submitted-for-verification-at-sepolia-basescan-org-on-2025-03-01-File-openzeppelin-co-1740810697026.txt  Pasted-1-XAO-Token-ERC-20-Purpose-Governance-staking-payments-and-incentives-Requirements-Minting-1740621717627.txt  Pasted-Colony-is-a-platform-designed-to-facilitate-decentralized-and-efficient-governance-for-organizations-1740622519840.txt  Pasted-Final-Features-Public-Ticket-Sales-Event-Status-Available-to-all-users-inside-the-Xao-Wallet-Pr-1740621118517.txt  Pasted-Finalized-NFT-Ticketing-Smart-Contract-System-This-document-details-the-Parent-Event-Contract-and-Ar-1740616445353.txt  Pasted-import-AgentKit-CdpWalletProvider-wethActionProvider-walletActionProvider-erc20Actio-1742067460076.txt
contracts/: ArtistContract.sol  ArtistVenueArbitration.sol  EventExplorer.sol  EventTicketERC1155.sol  EventTicketERC721.sol  Migrations.sol  ParentEventContract.sol  XAOGovernance.sol  XAOMarketing.sol  XAOReferral.sol  XAOReputation.sol  XAOStaking.sol  XAOToken.sol  XAOTreasury.sol
frontend/: package.json
logs/: deployment_log.json
migrations/: 1_deploy_contracts.js  2_deploy_contracts.js  2_deploy_staking.js  2_deploy_token.js  (+2 more)
(+73 files in other folders)
