[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.2.3",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "qrcode>=8.0",
    "twilio>=9.5.0",
    "web3>=7.9.0",
]
